--- a/index.html
+++ b/index.html
@@ -1,29 +1,23 @@
 <html>
 <head>
-        <!-- Place this data between the <head> tags of your website -->
-        <title>MUHC 官方網站</title>
-        <meta name="description" content="MUHC的官方網站1" />
+    <meta property="og:url" content="https://invite.kizinn.tk" />
+    <meta property="og:title" content="Kizinn" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="A bot for Discord" />
+    <meta property="og:image" content="https://cdn.kizinn.tk/images/avatar.png" />
+    
+    <link rel="apple-touch-icon" sizes="198x180" href="https://cdn.kizinn.tk/images/avatar.png">
+    <link rel="icon" type="image/png" sizes="33x30" href="https://cdn.kizinn.tk/images/avatar.png">
+    <link rel="icon" type="image/png" sizes="198x180" href="https://cdn.kizinn.tk/images/avatar.png">
+    <link rel="icon" type="image/png" sizes="198x180" href="https://cdn.kizinn.tk/images/avatar.png">
+    <link rel="icon" type="image/png" sizes="22x20" href="https://cdn.kizinn.tk/images/avatar.png">
+    <link rel="shortcut icon" href="https://cdn.kizinn.tk/images/avatar.png">
+    <meta name="apple-mobile-web-app-title" content="Kizinn">
+    <meta name="application-name" content="Kizinn">
+    <meta name="msapplication-TileColor" content="#DB63F8">
+    <meta name="msapplication-TileImage" content="https://cdn.kizinn.tk/images/avatar.png">
+    <meta name="theme-color" content="#DB63F8">
 
-        <!-- Twitter Card data -->
-        <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@muhc_official">
-        <meta name="twitter:title" content="MUHC 官方網站2">
-        <meta name="twitter:description" content="MUHC的官方網站3">
-        <meta name="twitter:creator" content="@muhc_official">
-        <!-- Twitter Summary card images must be at least 120x120px -->
-        <meta name="twitter:image" content="https://i.imgur.com/OptsSJX.png">
-
-        <!-- Open Graph data -->
-        <meta property="og:title" content="MUHC 官方網站4" />
-        <meta property="og:type" content="article" />
-        <meta property="og:url" content="http://muhc.tw" />
-        <meta property="og:image" content="https://i.imgur.com/OptsSJX.png" />
-        <meta property="og:description" content="MUHC的官方網站5" /> 
-        <meta property="og:site_name" content="MUHC 官方網站6" />
-        <meta property="fb:app_id" content="1025658790940370" />
-		<link rel="shortcut icon" href="https://i.imgur.com/OptsSJX.png"/>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="refresh" content="0;url=https://discordapp.com/oauth2/authorize?client_id=506843065424543745&permissions=2081418487&scope=bot">
     <link rel="canonical" href="https://discordapp.com/oauth2/authorize?client_id=506843065424543745&permissions=2081418487&scope=bot">
 </head>
