--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
     <meta property="og:url" content="https://invite.kizinn.tk" />
-    <meta property="og:title" content="Kizinn" />
+    <meta property="og:title" content="Kizinn Bot Invite Link" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="A bot for Discord" />
+    <meta property="og:description" content="Kizinn's bot invite link" />
     <meta property="og:image" content="https://cdn.kizinn.tk/images/avatar.png" />
     
     <link rel="apple-touch-icon" sizes="198x180" href="https://cdn.kizinn.tk/images/avatar.png">
